--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +10,70 @@
     <!-- main css -->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-    <h1>hello world</h1>
+    <header>
+        <nav></nav>
+    </header>
+    <section class="banner">
+        <div class="banner-text-area"></div>
+        <div class="banner-image-area"></div>
+    </section>
+    <section class="branding">
+        <hr class="branding-line">
+        <img src="./assets/all-images/logos/Alibaba.svg" alt="">
+        <img src="./assets/all-images/logos/Amazon.svg" alt="">
+        <img src="./assets/all-images/logos/Daraz.pk Logo.svg" alt="">
+        <img src="./assets/all-images/logos/Ebay.svg" alt="">
+        <img src="./assets/all-images/logos/Rakuten.svg" alt="">
+        <img src="./assets/all-images/logos/Target.svg" alt="">
+        <img src="./assets/all-images/logos/Walmart.svg" alt="">
+        <hr class="branding-line">
+    </section>
+    <section class="popular-collection">
+        <h3 class="title">Popular Collection</h3>
+        <div class="collections">
+            <div class="collection">
+                <img src="./assets/all-images/images/action.png" alt="">
+                <h4 class="coll-title"></h4>
+                <p class="coll-price"></p>
+                <div class="rating-area">
+                    <i></i>
+                    <p></p>
+                </div>
+                <div class="coll-description">
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+            </div>
+            <div>
+                <a href="" class="see-more">See More</a>
+            </div>
+        </div>
+    </section>
+    <section class="features">
+        <div class="feature-img">
+            <img src="" alt="">
+        </div>
+        <div class="feature-description">
+            <h3>Featured products at one place</h3>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
+                enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <button>Join Now</button>
+        </div>
+    </section>
+    <footer>
+        <div class="footer-area">
+            <h4>Influencer products</h4>
+            <p>Copyright © 2020 influencer products
+                All rights reserved</p>
+            <div class="social">
+                
+            </div>
+        </div>
+
+    </footer>
 </body>
+
 </html>
